[package]
name = "twitter-likes-exporter-rs"
version = "0.1.0"
authors = ["Matthew MacGregor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
clap = { version = "4.0.26", features = ["derive"] }
chrono = "0.4.23"